stephenh/joist-java:fixed GRADLE_REPORT_GENERATION

--- a/build.gradle
+++ b/build.gradle
@@ -49,3 +49,13 @@ task wrapper(type: Wrapper) {
     gradleVersion = '4.10'
 }
 
+
+allprojects {
+    tasks.withType(Test).configureEach {
+        if (!project.hasProperty("createReports")) {
+            reports.html.required = false
+            reports.junitXml.required = false
+        }
+    }
+
+}
