--- a/build.gradle
+++ b/build.gradle
@@ -120,3 +120,13 @@ subprojects {
     buildFeatures.viewBinding = true
   }
 }
+
+allprojects {
+    tasks.withType(Test).configureEach {
+        if (!project.hasProperty("createReports")) {
+            reports.html.required = false
+            reports.junitXml.required = false
+        }
+    }
+
+}
