--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,13 @@ buildscript {
     }
 }
 allprojects {
+    tasks.withType(Test).configureEach {
+        if (!project.hasProperty("createReports")) {
+            reports.html.required = false
+            reports.junitXml.required = false
+        }
+    }
+
     repositories {
         jcenter()
         maven {
